vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr
  tags = {
    Name = "${var.use_case}_vpc"
    Env = var.env
  }
}
